--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -6,6 +6,13 @@ build:
                   file: build/clover.xml
                   format: clover
 
+    environment:
+        php:
+            version: 7.2
+    dependencies:
+        after:
+            - composer require --dev "squizlabs/php_codesniffer=^3.6.0"
+
 filter:
     excluded_paths:
         - tests/*
