--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
         }
     ],
     "require": {
-        "php": "^7.1"
+        "php": "^7.1 || ^8.0"
     },
     "require-dev": {
         "doctrine/dbal": "^2.6",
         "friendsofphp/php-cs-fixer": "^2.14",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5.20 || ^8.5.12 || ^9.0"
     },
     "suggest": {
         "lamoda/cleaner-bundle": "For integration with Symfony"
@@ -31,6 +31,9 @@
         }
     },
     "config": {
+        "platform": {
+            "php": "7.2"
+        },
         "sort-packages": true
     }
 }
